deploy/cloudflare-argo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: argo-controller
  name: argo-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      run: argo-controller
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: argo-controller
    spec:
      containers:
      - command:
        - /argot
        - -v=6
        image: gcr.io/stackpoint-public/argot:0.5.0
        imagePullPolicy: Always
        name: argo-controller
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: cloudflare-argo
      serviceAccountName: cloudflare-argo
      terminationGracePeriodSeconds: 30
