deploy/httpbin.yaml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
items:
- kind: Deployment
  apiVersion: apps/v1beta1
  metadata:
    name: httpbin
  spec:
    replicas: 2
    template:
      metadata:
        labels:
          app: warp-service-app
      spec:
        containers:
        - name: httpbin
          image: kennethreitz/httpbin:latest
          ports:
          - containerPort: 8080
- kind: Service
  apiVersion: v1
  metadata:
    name: httpbin-service
  spec:
    selector:
      app: warp-service-app
    ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: httpbin
    annotations:
      kubernetes.io/ingress.class: cloudflare-warp
  spec:
    rules:
    - host: httpbin.example.co
      http:
        paths:
        - path: /
          backend:
            serviceName: httpbin-service
            servicePort: 80
